SWED-2045 fix z-index tooltip & border input addon

--- a/src/less/components/input-group.less
+++ b/src/less/components/input-group.less
@@ -85,14 +85,6 @@
             border-left: none;
         }
 
-        &:first-child {
-            margin-right: -1px;
-        }
-
-        &:last-child {
-            margin-left: -1px;
-        }
-
         input[type="radio"],
         input[type="checkbox"] {
             margin-top: 0;
