--- a/src/less/components/tooltip.less
+++ b/src/less/components/tooltip.less
@@ -26,6 +26,7 @@
         border-color: rgba(255, 255, 255, 1) transparent transparent transparent;
         opacity: 0;
         transition: opacity 0.3s ease-in-out;
+        z-index: calc(@tooltip-z-index + 1);
     }
 
     [role="tooltip"] {
